# SGL

./: CMakeLists.txt  README.md  cmake.json
resource/model/vikingroom/: r1.max  vikingroom.mtl  vikingroom.mtl.bak
src/: FrameBuffer.cpp  FrameBuffer.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Pipeline.cpp  Pipeline.h  SGL.cpp  SGL.h  Shader.cpp  Shader.h  debug.cpp  debug.h  geometry.h  global.h  main.cpp  math.h  maths.cpp  maths.h
test/: .CMakeLists.txt.swp  CMakeLists.txt  geometry_test.cpp  mat_test.cpp  test_modelloader.cpp
third_part/soil/: CMakeLists.txt
